manifests/pi-hole/pihole.yaml
# This StatefulSet deploys the Pi-hole application with read-write access
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pi-hole-rw
  labels:
    app.kubernetes.io/name: pi-hole
    pi.hole/role: read-write
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: pi-hole
      pi.hole/role: read-write
  serviceName: "pi-hole"
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pi-hole
        pi.hole/role: read-write
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app.kubernetes.io/name: pi-hole
      containers:
      - name: pi-hole
        image: pihole/pihole:2025.11.1
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
        volumeMounts:
        - name: pihole-data
          mountPath: /etc/pihole
        livenessProbe:
          failureThreshold: 3
          timeoutSeconds: 5
          httpGet:
            path: /admin
            port: http
        readinessProbe:
          failureThreshold: 3
          timeoutSeconds: 5
          httpGet:
            path: /admin
            port: http
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
      # - name: exporter
      #   image: ekofr/pihole-exporter:v1.2.0
      #   env:
      #     - name: PIHOLE_HOSTNAME
      #       value: "pi-hole-rw-0.pi-hole.pi-hole.svc.cluster.local,pi-hole-ro-0.pi-hole.pi-hole.svc.cluster.local,pi-hole-ro-1.pi-hole.pi-hole.svc.cluster.local"
      #     - name: PIHOLE_PORT
      #       value: "80,80,80"
      #     - name: PIHOLE_PASSWORD
      #       valueFrom:
      #         secretKeyRef:
      #           name: pi-hole-credentials
      #           key: exporter-password
      #     - name: DEBUG
      #       value: "true"
      #   resources:
      #     limits:
      #       memory: 128Mi
      #     requests:
      #       cpu: 50m
      #       memory: 128Mi
      #   ports:
      #     - containerPort: 9617
      #       name: prometheus
      #       protocol: TCP
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
      - name: pihole-data
        persistentVolumeClaim:
          claimName: pihole-data
---
# This service exposes the HTTP admin interface of Pi-hole
apiVersion: v1
kind: Service
metadata:
  name: pi-hole-web
  labels: 
    app.kubernetes.io/name: pi-hole
    pi.hole/role: read-write
spec:
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 300
  selector:
    app.kubernetes.io/name: pi-hole
    pi.hole/role: read-write
  ports:
  - port: 80
    targetPort: http
    name: http
---
# Tailscale Ingress for Pi-hole admin interface
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pi-hole
spec:
  defaultBackend:
    service:
      name: pi-hole-web
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - pihole
---
# This HTTPRoute routes traffic to the Pi-hole admin interface
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations: {}
  name: pihole-https-route
spec:
  hostnames:
  - pihole.ashishverma.dev
  parentRefs:
  - name: envoy
    namespace: envoy-gateway-system
    sectionName: https
  rules:
  - filters:
    - requestRedirect:
        path:
          replaceFullPath: /admin
          type: ReplaceFullPath
        statusCode: 302
      type: RequestRedirect
    matches:
    - path:
        type: Exact
        value: /
  - backendRefs:
    - group: ""
      kind: Service
      name: pi-hole-web
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
---
# This service exposes only the DNS ports of Pi-hole
apiVersion: v1
kind: Service
metadata:
  name: pi-hole-dns
  labels:
    app.kubernetes.io/name: pi-hole
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "pihole-dns"
    metallb.io/address-pool: "dns"
spec:
  type: LoadBalancer
  ports:
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  selector:
    app.kubernetes.io/name: pi-hole
---
# Service for the read-write Pi-hole StatefulSet
apiVersion: v1
kind: Service
metadata:
  name: pi-hole
  labels: 
    app.kubernetes.io/name: pi-hole
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: pi-hole
  ports:
  - port: 80
    targetPort: http
    name: http
---
# Read only StatefulSet for Pi-hole
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pi-hole-ro
  labels:
    app.kubernetes.io/name: pi-hole
    pi.hole/role: read-only
spec:
  serviceName: "pi-hole"
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: pi-hole
      pi.hole/role: read-only
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pi-hole
        pi.hole/role: read-only
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app.kubernetes.io/name: pi-hole
      containers:
      - name: pi-hole
        image: pihole/pihole:2025.11.1
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
        volumeMounts:
        - name: pihole-data
          mountPath: /etc/pihole
        livenessProbe:
          failureThreshold: 3
          timeoutSeconds: 5
          httpGet:
            path: /admin
            port: http
        readinessProbe:
          failureThreshold: 3
          timeoutSeconds: 5
          httpGet:
            path: /admin
            port: http
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
      - name: pihole-data
        emptyDir: {}
